Fix ControlSiteFinder to properly use Furniture as preference. Fix spinner when loading street furniture. Fixes https://github.com/jcundill/streeto/issues/4. Format control descriptions better. Only fetch furniture if not already present.